<resources>
    <string name="app_name">\t Covid-19</string>
    <string name="hint_search">Search</string>
    <string name="title_home_bottom_navigation_menu_overview">Overview</string>
    <string name="title_home_bottom_navigation_menu_countries">Countries</string>
    <string name="title_home_bottom_navigation_menu_analytics">Analytics</string>
    <string name="title_home_bottom_navigation_menu_map">Map</string>
    <string name="title_home_bottom_navigation_menu_refresh">Refresh</string>


    <string name="data_base_name">movies_db</string>

    <string name="bad_request">Please make sure that the countriesData are valid</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="internal_fix">There are some fixes are running now, please try again later</string>
    <string name="no_connection">No connection</string>
    <string name="connection_error">Connection error</string>
    <string name="connect_exception">Check your internet connection</string>
    <string name="unauthorized">Invalid authorization code!</string>
    <string name="server_error">Internal server error</string>
    <string name="hi">Hi</string>
    <string name="cannot_open_this_movie">cannot open this movie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="label_statistics_total_confirmed">Total Confirmed</string>
    <string name="label_statistics_total_recovered">Total Recovered</string>
    <string name="label_statistics_total_deaths">Total Deaths</string>

    <string name="label_statistics_country_name">Country Name</string>
    <string name="label_statistics_total_cases">Total Cases</string>
    <string name="label_statistics_critical_cases">Critical Cases</string>


    <string name="countries_item_flag_desc">Country Flag</string>
    <string name="total_cases">Total Cases</string>
    <string name="total_new_cases">Total New Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="active_cases">Active Cases</string>
    <string name="country_name">China</string>
</resources>
