<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCountryName"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sans_bold"
            android:text="@string/country_name"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            tools:text="China" />

        <com.google.android.material.card.MaterialCardView
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:strokeColor="@color/colorDivider"
            app:strokeWidth="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="25dp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:text="@string/label_statistics_total_cases"
                    android:textColor="@color/colorRed"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:id="@+id/tvTotalCases"
                    android:fontFamily="@font/sans_bold"
                    android:text="@string/total_cases"
                    android:textColor="@color/colorRed"
                    android:textSize="32sp"
                    tools:text="168,976" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="Total New Cases"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sans_bold"
                        android:id="@+id/tvTotalNewCases"

                        android:textColor="@color/colorAccent"
                        android:textSize="32sp"
                        tools:text="77,236" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="@string/label_statistics_total_deaths"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/tvTotalDeath"
                        android:fontFamily="@font/sans_bold"
                        android:textColor="@color/colorPrimary"
                        android:textSize="32sp"
                        tools:text="6,508" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="New Death"
                        android:textColor="@color/colorDarkGray"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sans_bold"

                        android:textColor="@color/colorDarkGray"
                        android:textSize="32sp"
                        android:id="@+id/tvTotalNewDeath"
                        tools:text="77,236" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="@string/label_statistics_total_recovered"
                        android:textColor="@color/colorGreen"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sans_bold"
                        android:textColor="@color/colorGreen"
                        android:id="@+id/tvTotalRecovered"
                        android:textSize="32sp"
                        tools:text="6,508" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="@string/active_cases"
                        android:textColor="@color/colorLightBlue"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:id="@+id/tvTotalActiveCases"
                        android:fontFamily="@font/sans_bold"
                        android:textColor="@color/colorLightBlue"
                        android:textSize="32sp"
                        tools:text="77,236" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorDivider"
                app:strokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_regular"
                        android:text="@string/label_statistics_critical_cases"
                        android:textColor="@color/colorRed"
                        android:textSize="16sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/sans_bold"
                        android:id="@+id/tvTotalCriticalCases"
                        android:textColor="@color/colorRed"
                        android:textSize="32sp"
                        tools:text="6,508" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </com.google.android.material.card.MaterialCardView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>